# word_sensitive_nif

./: .gitignore  Makefile  README.md  rebar.config
crates/: build_crates.sh
crates/word_sensitive/: Cargo.toml  build.rs  libpath
crates/word_sensitive/src/: ext.rs  lib.rs  nif.rs  options.rs
crates/word_sensitive/tests/: word_sensitive_test.rs
include/: word_sensitive_nif.hrl
src/: word_sensitive.erl  word_sensitive_nif.app.src  word_sensitive_nif.erl  word_sensitive_nif_app.erl  word_sensitive_nif_sup.erl
test/ct/: word_sensitive_SUITE.erl  word_sensitive_ct.hrl
