[package]
name = "word_sensitive_nif"
version = "0.1.0"
authors = ["yangcancai <yangcancai0112@gmail.com>"]
license = "MIT/Apache-2.0 2021"
build = "build.rs"

[lib]
name = "word_sensitive_nif"
crate-type = ["cdylib","rlib"]

[dependencies]
rustler = "0.22.0-rc.0"
serde = { version = "1.0", features = ["derive"] }
word_sensitive = {git="https://github.com/yangcancai/word_sensitive.git", branch = "main"}
#word_sensitive = "0.1.2"